# testat-vrogabe

delivery_bot/: package.xml  setup.py
delivery_bot/delivery_bot_py/: battery_manager.py  navigator.py  order_server.py  status_display.py
delivery_bot/launch/: delivery_system.launch.py
delivery_bot_interfaces/: CMakeLists.txt  package.xml
delivery_bot_interfaces/msg/: BatteryAlert.msg  DeliveryTask.msg  RobotStatus.msg
delivery_bot_interfaces/srv/: DeliverPackage.srv
